Revert "23.06.16/컨트롤러1-120 이름 찾기 수정 / 리포지포리 이름찾기 수정/서비스 list 변경 수정 / 헤더 서치 수정/ result 결과 수정/"
This reverts commit f43ba72436ab1bb42dadea91aef7db1387ce9381.

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -39,8 +39,16 @@
         <img class="logo" src="/img/logo3.png" alt="" />
       </a>
       <div class="flex-sm-fill">
-        <form action="/nutri/search" class="text-sm-center nav-link" id="search-bar">
-          <input type="search" name="keyword" placeholder="검색어를 입력하세요" style="font-family: 'NanumSquareNeo-Variable'">
+        <form
+          action="/nutri/search"
+          class="text-sm-center nav-link"
+          id="search-bar"
+        >
+          <input
+            type="search"
+            placeholder="검색어를 입력하세요"
+            style="font-family: 'NanumSquareNeo-Variable'"
+          />
           <button type="submit"></button>
         </form>
       </div>
