--- a/src/main/resources/templates/nutri/about.html
+++ b/src/main/resources/templates/nutri/about.html
@@ -31,7 +31,7 @@
             </span>
           </h2>
 
-          <ul class="nutri_about">
+          <ul class="nutri_about" th{}>
             <li>구분</li>
             <li>제조사</li>
             <li>주성분</li>
