--- a/src/main/resources/templates/nutri/result.html
+++ b/src/main/resources/templates/nutri/result.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-
+<div id="header-placeholder"></div>
   <div class="location">
     <span class="ar">home</span>
     <span class="ar"> > </span>
