--- a/src/main/resources/templates/nutri/about.html
+++ b/src/main/resources/templates/nutri/about.html
@@ -2,50 +2,101 @@
 <html lang="kr">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" th:href="@{/css/nutri_about.css}" />
-  <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <title>영양제 상세 페이지</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
+<link rel="stylesheet" th:href="@{/css/nutri_about.css}" />
+<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+<title>영양제 상세 페이지</title>
 </head>
 
 <body>
-  <div id="header-placeholder"></div>
-  <div class="container">
-    <div class="container marketing">
-      <div class="row">
-      </div>
-      <!-- START THE FEATURETTES -->
-      <hr class="featurette-divider">
+	<div id="header-placeholder"></div>
+	<div class="location">
+		<span class="ar">home</span> <span class="ar"> > </span> <span
+			class="ar">영양제 검색</span> <span class="ar"> > </span> <span>검색결과</span>
+	</div>
 
-      <div class="row featurette">
-        <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading fw-normal lh-1">고려은단 비타민C 1000 <span>
-              <button class="heart-button" aria-label="Heart Button">
-                <i class="fas fa-heart"></i>
-              </button>
-            </span>
-          </h2>
+	<div id="nutri_main">
+		<h1>
+			<label for="" id="main_title">영양제 검색 결과</label>
+		</h1>
+		<!-- START THE FEATURETTES -->
+		<div class="nutri-result">
+			<div class="text_context">
+				<div class="grid-contents">
+					<div class="text_area grid-item1"
+						th:each="nutri, iterStat : ${nutris}">
+						<div class="raw">
+							<div class="cal">
+								<div class="cal-v">
+									<div class="p_img">
+										<a th:href="@{/nutri/about(keyword=${nutri.name})}"> <img
+											src="/src/main/resources/static/img/nutri.jpg" id="product" />
+										</a>
+									</div>
+									<div class="p_content">
+										<div>
+											<span th:text="${nutri.name}">고려은단 비타민C 1000</span>
+											<button class="heart-button" aria-label="Heart Button">
+												<i class="fas fa-heart"></i>
+											</button>
+										</div>
+										<div class="labels">
+											<label for="nutri_contens">구분: <span
+												th:text="${nutri.category}">비타민C</span>
+											</label> <label for="nutri_company">제조사: <span
+												th:text="${nutri.company}">고려은단</span>
+											</label>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="text_area grid-item2"
+						th:each="nutri, iterStat : ${nutris}"
+						th:if="${iterStat.index % 2 != 0}">
+						<div class="raw">
+							<div class="cal">
+								<div class="cal-v">
+									<div class="p_img">
+										<a th:href="@{/nutri/about(keyword=${nutri.name})}"> <img
+											src="/src/main/resources/static/img/nutri.jpg" id="product" />
+										</a>
+									</div>
+									<div class="p_content">
+										<div>
+											<span th:text="${nutri.name}">고려은단 비타민C 1000</span>
+											<button class="heart-button" aria-label="Heart Button">
+												<i class="fas fa-heart"></i>
+											</button>
+										</div>
+										<div class="labels">
+											<label for="nutri_contens">구분: <span
+												th:text="${nutri.category}">비타민C</span>
+											</label> <label for="nutri_company">제조사: <span
+												th:text="${nutri.company}">고려은단</span>
+											</label>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
-          <ul class="nutri_about" th{}>
-            <li>구분</li>
-            <li>제조사</li>
-            <li>주성분</li>
-            <li>효능</li>
-          </ul>
-        </div>
-        <div class="col-md-5 order-md-1">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-            height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-            preserveAspectRatio="xMidYMid slice" focusable="false">
-            <image href="/img/vitamin.jpg" width="100%" height="100%" />
-          </svg>
-        </div>
-      </div>
+		<div class="col-md-5 order-md-1">
+			<svg class="bd-placeholder
+
 
       <hr class="featurette-divider">
       <div class="nutri_index">복용법
@@ -67,12 +118,14 @@
 
       <!-- /END THE FEATURETTES -->
 
-    </div><!-- /.container -->
+    
+		
+		</div>
+		<!-- /.container -->
 
-    <div id="footer-placeholder"></div>
-    <script th:src="@{/js/hf.js}"></script>
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
+		<div id="footer-placeholder"></div>
+		<script th:src="@{/js/hf.js}"></script>
+		<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
