--- a/src/main/resources/templates/nutri/result.html
+++ b/src/main/resources/templates/nutri/result.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="kr">
 <!-- START : header -->
 
@@ -37,9 +37,8 @@
 							<div class="cal">
 								<div class="cal-v">
 									<div class="p_img">
-										<img src="/src/main/resources/static/img/nutri.jpg"
-											id="product"
-											th:onclick="'location.href=\'/nutri/about?keyword=\' + ${nutri.name}'" />
+										<a th:href="@{/nutri/{nutri_idx}(id=${nutri.idx})}"> 
+										<img th:src="@{${nutri.image}}" id="product" /></a>
 									</div>
 									<div class="p_content">
 										<div th:text="${nutri.name}">고려은단 비타민C 1000</div>
@@ -65,9 +64,8 @@
 							<div class="cal">
 								<div class="cal-v">
 									<div class="p_img">
-										<img src="/src/main/resources/static/img/nutri.jpg"
-											id="product"
-											th:onclick="'location.href=\'/nutri/about?keyword=\' + ${nutri.name}'" />
+										<a th:href="@{/nutri/{nutri_idx}(id=${nutri.idx})}"> 
+										<img th:src="@{${nutri.image}}" id="product" /></a>
 									</div>
 									<div class="p_content">
 										<div th:text="${nutri.name}">고려은단 비타민C 1000</div>
@@ -102,6 +100,7 @@
 
 	<div id="footer-placeholder"></div>
 	<script th:src="@{/js/hf.js}"></script>
+	<script th:src="@{/js/heartbutton.js}"></script>
 	<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
