Revert "2023.06.18/ NutriController 이미지 클릭시 상세 페이지 이동/ JDBCNutriRepository,NutriRepository 이름 검색 추가 /NutriService 이름 검색 추가 / result.css 상품 간격 수정, /  about.html form 추가 / result.html 수정/"
This reverts commit 6e493a5479c55867d38df7697b4ae452cedd7797.

--- a/src/main/resources/templates/nutri/about.html
+++ b/src/main/resources/templates/nutri/about.html
@@ -95,45 +95,36 @@
 		</div>
 
 		<div class="col-md-5 order-md-1">
-
-			<hr class="featurette-divider">
-			<div class="nutri_index" th:text="${nutri.taking}">
-				복용법
-				<h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-					Nisi obcaecati culpa quia animi autem officiis tenetur consequatur
-					deleniti eos, neque rerum aspernatur amet corporis laborum veniam
-					fugiat, ipsam ut facere!</h3>
-			</div>
-			<div class="nutri_index" th:text="${nutri.caution}">
-				주의사항
-				<h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-					Nisi obcaecati culpa quia animi autem officiis tenetur consequatur
-					deleniti eos, neque rerum aspernatur amet corporis laborum veniam
-					fugiat, ipsam ut facere!</h3>
-			</div>
-
-			<div class="nutri_index" th:text="${nutri.etc}">
-				기타
-				<h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-					Nisi obcaecati culpa quia animi autem officiis tenetur consequatur
-					deleniti eos, neque rerum aspernatur amet corporis laborum veniam
-					fugiat, ipsam ut facere!</h3>
-			</div>
-			<svg
-				class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-				xmlns="http://www.w3.org/2000/svg"
-				preserveAspectRatio="xMidYMid slice" focusable="false">
-      </svg>
+			<svg class="bd-placeholder
 
 
-			<!-- /END THE FEATURETTES -->
+      <hr class="featurette-divider">
+      <div class="nutri_index">복용법
+        <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi obcaecati culpa quia animi autem officiis
+          tenetur consequatur deleniti eos, neque rerum aspernatur amet corporis laborum veniam fugiat, ipsam ut facere!
+        </h3>
+      </div>
+      <div class="nutri_index">주의사항
+        <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi obcaecati culpa quia animi autem officiis
+          tenetur consequatur deleniti eos, neque rerum aspernatur amet corporis laborum veniam fugiat, ipsam ut facere!
+        </h3>
+      </div>
 
+      <div class="nutri_index">기타
+        <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi obcaecati culpa quia animi autem officiis
+          tenetur consequatur deleniti eos, neque rerum aspernatur amet corporis laborum veniam fugiat, ipsam ut facere!
+        </h3>
+      </div>
+
+      <!-- /END THE FEATURETTES -->
+
+    
+		
 		</div>
 		<!-- /.container -->
 
 		<div id="footer-placeholder"></div>
 		<script th:src="@{/js/hf.js}"></script>
-		<script th:src="@{/js/heartbutton.js}"></script>
 		<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
