--- a/src/main/resources/static/css/nutri_result.css
+++ b/src/main/resources/static/css/nutri_result.css
@@ -1,120 +1,159 @@
 @font-face {
-  font-family: 'NanumSquareNeo-Variable';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
+	font-family: 'NanumSquareNeo-Variable';
+	src:
+		url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+	font-weight: normal;
+	font-style: normal;
 }
 
 .body {
-  min-height: calc(100vh - 100px);
-  margin: 30px;
-  width: 500px;
+	min-height: calc(100vh - 100px);
+	margin: 30px;
+	width: 500px;
 }
 
 .location {
-  margin-top: 5%;
-  margin-left: 20%;
+	margin-top: 5%;
+	margin-left: 20%;
 }
 
 #nutri_main {
-  text-align: center;
-  margin: 10px;
+	text-align: center;
+	margin: 10px;
 }
 
 #main_title {
-  margin-bottom: 5%;
-  margin-top: 5%;
-}
-
-.text_context {
-  width: 100%;
-}
-
-.grid-contents {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.grid-item1 {
-  float: left;
-}
-
-.grid-item2 {
-  float: right;
-}
-
-.p_content {
-  display: flex;
-  flex-direction: column;
+	margin-bottom: 5%;
+	margin-top: 5%;
 }
 
 .p_img {
-  float: left;
-  margin-right: 10px 0;
+	float: left;
+	margin-right: 10px 0;
 }
 
 .p_img #product {
-  width: 250px;
+	width: 250px;
 }
 
+
+.text_area.grid-item1,
+.text_area.grid-item2 {
+	display: inline-block;
+	width: 50%;
+	margin-bottom: 2%;
+}
+
+.text_area.grid-item1 .cal-v {
+	display: flex;
+	align-items: stretch;
+	margin-left: 40%;
+}
+
+.text_area.grid-item1 .p_img #product {
+	text-align: right;
+	margin-left: 10px;
+}
+
+.text_area.grid-item1 .p_content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: baseline;
+}
+
+
+.text_area.grid-item2 {
+	float: right;
+	text-align: left;
+}
+
+.text_area.grid-item2 .cal-v {
+	display: flex;
+}
+
+.text_area.grid-item2 .p_img {
+	margin-left: 5%;
+}
+
+.text_area.grid-item2 .p_content {
+	margin-left: 5%;
+	text-align: left;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: baseline;
+}
+
+.cal {
+	display: felx;
+
+}
+
+
 .labels {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.p_content {
+	display: flex;
+	align-items: center;
 }
 
 .heart-button {
-  border: none;
-  background-color: transparent;
-  padding: 0;
-  margin-left: 10px;
-  font-size: 24px;
-  color: #ccc;
-  cursor: pointer;
+	border: none;
+	background-color: transparent;
+	padding: 0;
+	margin-left: 10px;
+	font-size: 24px;
+	color: #ccc;
+	cursor: pointer;
+	flex-shrink: 0;
+	/* 버튼이 축소되지 않도록 설정 */
 }
 
 .heart-button i {
-  transition: color 0.3s ease;
+	transition: color 0.3s ease;
 }
 
 .heart-button.active i {
-  color: rgba(255, 0, 0, 0.719);
+	color: rgba(255, 0, 0, 0.719);
 }
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
+@media (min-width : 40em) {
 
-@media (min-width: 40em) {
+	/* Bump up size of carousel content */
+	.carousel-caption p {
+		margin-bottom: 1.25rem;
+		font-size: 1.25rem;
+		line-height: 1.4;
+	}
 
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 1.25rem;
-    font-size: 1.25rem;
-    line-height: 1.4;
-  }
-
-  .featurette-heading {
-    font-size: 50px;
-  }
+	.featurette-heading {
+		font-size: 50px;
+	}
 }
 
-@media (min-width: 62em) {
-  .featurette-heading {
-    margin-top: 7rem;
-  }
+@media (min-width : 62em) {
+	.featurette-heading {
+		margin-top: 7rem;
+	}
 }
-
 
 .bd-placeholder-img {
-  font-size: 1.125rem;
-  text-anchor: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
+	font-size: 1.125rem;
+	text-anchor: middle;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	user-select: none;
 }
 
-@media (min-width: 768px) {
-  .bd-placeholder-img-lg {
-    font-size: 3.5rem;
-  }
+@media (min-width : 768px) {
+	.bd-placeholder-img-lg {
+		font-size: 3.5rem;
+	}
 }
