--- a/src/main/resources/templates/admin/nutri_edit.html
+++ b/src/main/resources/templates/admin/nutri_edit.html
@@ -45,11 +45,11 @@
           <tr>
             <td>성상:</td>
             <td>
-              <input type="text" name="base" placeholder="내용을 입력해주세요" th:value="${shape}" th:field="${nutri.shape}"/>
+              <input type="text" name="shape" placeholder="내용을 입력해주세요" th:value="${shape}" th:field="${nutri.shape}"/>
             </td>
             <td>주성분:</td>
             <td>
-              <input type="text" name="effect" placeholder="내용을 입력해주세요" th:value="${base}" th:field="${nutri.base}"/>
+              <input type="text" name="base" placeholder="내용을 입력해주세요" th:value="${base}" th:field="${nutri.base}"/>
             </td>
           </tr>
         <tr>
@@ -62,7 +62,7 @@
         <tr>
           <td>효능:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="taking" placeholder="내용을 입력해주세요" th:value="${effect}" th:field="${nutri.effect}"></textarea>
+            <textarea name="effect" placeholder="내용을 입력해주세요" th:value="${effect}" th:field="${nutri.effect}"></textarea>
           </td>
         </tr>
         <tr>
@@ -74,19 +74,19 @@
         <tr>
           <td>보관방법:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="caution" maxlength="500" placeholder="내용을 입력해주세요" th:value="${storage}" th:field="${nutri.storage}"></textarea>
+            <textarea name="storage" maxlength="500" placeholder="내용을 입력해주세요" th:value="${storage}" th:field="${nutri.storage}"></textarea>
           </td>
         </tr>
         <tr>
           <td>제품형태:</td>
           <td colspan="2" class="textarea-row">
-            <textarea name="etc" maxlength="500" placeholder="내용을 입력해주세요" th:value="${type}" th:field="${nutri.type}"></textarea>
+            <textarea name="type}" maxlength="500" placeholder="내용을 입력해주세요" th:value="${type}" th:field="${nutri.type}"></textarea>
           </td>
         </tr>
         </tbody>
         <tr>
           <td>이미지 첨부:</td>
-          <td><input type="file" name="img" accept="image/*" th:value="${image}"  /></td>
+          <td><input type="file" name="image" accept="image/*" th:value="${image}"  /></td>
         </tr>
       </table>
       <div style="font-family: 35px extrabold 'NanumSquareNeo-Variable'" class="button-row">
