--- a/src/main/resources/static/css/nutri_result.css
+++ b/src/main/resources/static/css/nutri_result.css
@@ -44,6 +44,8 @@
 	margin-bottom: 2%;
 }
 
+.cal .cal-v {}
+
 .text_area.grid-item1 .cal-v {
 	display: flex;
 	align-items: stretch;
@@ -83,11 +85,6 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: baseline;
-}
-
-.cal {
-	display: felx;
-
 }
 
 
