--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -66,6 +66,8 @@ a {
   margin-right: 20px;
 }
 
+z
+
 /* Second SearchBar */
 #button-addon2 {
   border: 1px solid #00997b;
@@ -135,8 +137,7 @@ a {
 }
 
 .card-body .like_button img:hover {
-  filter: invert(53%) sepia(10%) saturate(7265%) hue-rotate(323deg)
-    brightness(86%) contrast(85%);
+  filter: invert(53%) sepia(10%) saturate(7265%) hue-rotate(323deg) brightness(86%) contrast(85%);
 }
 
 .card-body a {
