--- a/src/main/resources/templates/nutri/result.html
+++ b/src/main/resources/templates/nutri/result.html
@@ -3,32 +3,30 @@
 <!-- START : header -->
 
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script
-	src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
-<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
-<link rel="stylesheet" th:href="@{/css/nutri_result.css}" />
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-<title>검색 결과</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/nutri_result.css}" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+	<title>검색 결과</title>
 </head>
 
 <body>
 	<div id="header-placeholder"></div>
 
 	<div class="location">
-		<span class="ar">home</span> <span class="ar"> > </span> <span
-			class="ar">영양제 검색</span> <span class="ar"> > </span> <span>검색결과</span>
+		<span class="ar">home</span> <span class="ar"> > </span> <span class="ar">영양제 검색</span> <span class="ar"> > </span>
+		<span>검색결과</span>
 	</div>
 
 	<div id="nutri_main">
 		<h1>
-			<label for="" id="main_title">영양제 검색 결과</label>
+			<span id="main_title" th:text="|'${keyword }' |">제품</span><span>검색결과</span>
 		</h1>
+
 		<!-- START THE FEATURETTES -->
 		<div class="nutri-result">
 			<div class="text_context">
@@ -36,30 +34,25 @@
 					<table>
 						<tbody>
 							<th:block th:each="nutri, stat : ${nutri}">
-								<div
-									th:class="${stat.index % 2 == 0} ? 'text_area grid-item1' : 'text_area grid-item2'">
+								<div th:class="${stat.index % 2 == 0} ? 'text_area grid-item1' : 'text_area grid-item2'">
 									<div class="cal">
 										<div class="cal-v">
 											<div class="p_img">
-												<a
-													th:href="@{/nutri/{nutri_name}(nutri_name=${nutri.name})}">
+												<a th:href="@{/nutri/{nutri_name}(nutri_name=${nutri.name})}">
 													<img th:src="@{${nutri.image}}" alt="제품이미지" id="product">
 												</a>
 											</div>
 											<div class="p_content">
-												<a
-													th:href="@{/nutri/{nutri_name}(nutri_name=${nutri.name})}">
-													<span th:text="${nutri.name}">고려은단 비타민C 1000 
+												<a th:href="@{/nutri/{nutri_name}(nutri_name=${nutri.name})}">
+													<span th:text="${nutri.name}">고려은단 비타민C 1000
 												</a>
-												<button type="button" class="heart-button" aria-label="Heart Button" th:if="${user}" th:onclick="|location.href='@{/user/like(nutri_idx=${nutri.idx}, user_idx=${user.idx})}'|">
+												<button class="heart-button" aria-label="Heart Button">
 													<i class="fas fa-heart"></i>
 												</button>
 												</span>
 												<div class="labels">
-													<label for="nutri_contens">구분: <span
-														th:text="${nutri.category}">비타민C</span></label> <label
-														for="nutri_company">제조사: <span
-														th:text="${nutri.company}">고려은단</span></label>
+													<label for="nutri_contens">구분: <span th:text="${nutri.category}">비타민C</span></label> <label
+														for="nutri_company">제조사: <span th:text="${nutri.company}">고려은단</span></label>
 												</div>
 											</div>
 										</div>
@@ -74,10 +67,8 @@
 		</div>
 
 		<div class="col-md-5 order-md-1">
-			<svg
-				class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-				xmlns="http://www.w3.org/2000/svg"
-				preserveAspectRatio="xMidYMid slice" focusable="false">
+			<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+				xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false">
 			</svg>
 		</div>
 	</div>
