--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -23,9 +23,8 @@
       </label>
       <div id="in_navi">
         <ul>
-          <li>
-            <a href="#" style="font-family: 'NanumSquareNeo-Variable'">영양제 찾기</a>
-          </li>
+          <li><a th:href="@{/nutri/nutri_search}"
+						style="font-family: 'NanumSquareNeo-Variable'">영양제 찾기</a></li>
         </ul>
       </div>
     </div>
